
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CMD_FILE ;
 int PRC_FILE ;
 int TMP_FILE ;
 int close (int ) ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int kill (int,int) ;
 scalar_t__ proc_r () ;
 int sock ;
 int stdout ;
 int unlink (int ) ;

void sf_exit()
{



 close(sock);
 kill((int)proc_r(),9);
 unlink(TMP_FILE);
 unlink(CMD_FILE);
 unlink(PRC_FILE);
 exit(-1);
}
