; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_982.c_sf_exit.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_982.c_sf_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sock = common dso_local global i32 0, align 4
@TMP_FILE = common dso_local global i32 0, align 4
@CMD_FILE = common dso_local global i32 0, align 4
@PRC_FILE = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sf_exit() #0 {
  %1 = load i32, i32* @sock, align 4
  %2 = call i32 @close(i32 %1)
  %3 = call i64 (...) @proc_r()
  %4 = trunc i64 %3 to i32
  %5 = call i32 @kill(i32 %4, i32 9)
  %6 = load i32, i32* @TMP_FILE, align 4
  %7 = call i32 @unlink(i32 %6)
  %8 = load i32, i32* @CMD_FILE, align 4
  %9 = call i32 @unlink(i32 %8)
  %10 = load i32, i32* @PRC_FILE, align 4
  %11 = call i32 @unlink(i32 %10)
  %12 = call i32 @exit(i32 -1) #3
  unreachable
}

declare dso_local i32 @close(i32) #1

declare dso_local i32 @kill(i32, i32) #1

declare dso_local i64 @proc_r(...) #1

declare dso_local i32 @unlink(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
